--- a/NuageAlarms/app/src/main/res/layout/activity_login.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
                     android:hint="@string/username_hint"
                     android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:text="admin"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/userName"/>
             <TextView
                     android:text="@string/password"
@@ -90,7 +90,7 @@
                     android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/checkBox"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rememberMeCheck"
                     android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>
             <ImageView
                     android:layout_width="wrap_content"
@@ -123,7 +123,6 @@
                     android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:text="csp"
                     app:layout_constraintTop_toBottomOf="@+id/companyName"/>
             <EditText
                     android:layout_width="wrap_content"
@@ -137,10 +136,10 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/passWord"/>
             <CheckBox
-                    android:text="@string/remenber_me"
+                    android:text="@string/remember_me"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/checkBox" android:layout_marginTop="24dp"
+                    android:id="@+id/rememberMeCheck" android:layout_marginTop="24dp"
                     app:layout_constraintTop_toBottomOf="@+id/passWordInput" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"/>
