--- a/NuageAlarms/app/src/main/res/layout/activity_main.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
                     android:layout_marginEnd="8dp"
                     style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
                     android:textSize="14sp"
-                    app:layout_constraintTop_toBottomOf="@+id/rememberMeCheck"
+                    app:layout_constraintTop_toBottomOf="@+id/rememberServerCheck"
                     android:layout_width="81dp" android:layout_marginTop="8dp" android:layout_marginBottom="32dp"
                     app:layout_constraintBottom_toBottomOf="parent"/>
             <TextView
@@ -73,7 +73,7 @@
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="85dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:hint="@string/name_ip_input"
-                    android:textStyle="italic" android:text="NokiaServer/124.252.253.219"
+                    android:textStyle="italic"
                     app:layout_constraintTop_toBottomOf="@+id/serverNameIp"/>
             <ImageView
                     android:layout_width="wrap_content"
@@ -101,13 +101,12 @@
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:textAllCaps="false" android:textStyle="italic" android:hint="@string/port_input"
-                    android:text="8443"
                     app:layout_constraintTop_toBottomOf="@+id/serverPort"/>
             <CheckBox
-                    android:text="@string/remenber_me"
+                    android:text="@string/remember_server"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/rememberMeCheck" android:layout_marginTop="24dp"
+                    android:id="@+id/rememberServerCheck" android:layout_marginTop="24dp"
                     app:layout_constraintTop_toBottomOf="@+id/serverPortInput"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
